fix table header and row alignment                             -move sell button to sold for column                                            -fix income calculation in summary

--- a/css/base.css
+++ b/css/base.css
@@ -7,7 +7,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
-  background-color: #ececde;
+  background-color: #000000;
   color: #000000;
 }
 
@@ -38,6 +38,7 @@ body {
   padding: 12px;
   border: 1px solid #222222;
   border-radius: 16px;
+  background-color: #ececde;
 }
 
 .logout-btn {
