--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -22,9 +22,6 @@
 
 /* Balance Summary */
 .balance-summary {
-  /* display: flex;
-  flex-direction: row;
-  flex-wrap: wrap; */
   background-color: #f5f5f5;
   padding: 20px;
   border-radius: 12px;
